# ultimatedivision-smartcontracts

./: .gitmodules  package-lock.json  package.json
assets/: 1.json  10.json  3.json  prgDescription.json
casper/: .gitignore  Cargo.toml  Makefile  README.md  justfile
casper/cep47/: Cargo.toml
casper/cep47/src/: cep47.rs
casper/contract-market/: Cargo.toml
casper/contract-market/src/: data.rs  event.rs  main.rs  uref.rs
casper/contract-market/src/interface/: onchain.rs
casper/contract-util/: Cargo.toml
casper/contract-util/src/: erc20.rs  lib.rs
casper/erc20/: Cargo.toml  justfile
casper/erc20/src/: main.rs
casper/sign_cli/: .gitignore  Cargo.toml
casper/sign_cli/src/: main.rs
casper/tests/: Cargo.toml  justfile
casper/tests/src/: constants.rs  lib.rs  udtoken.wasm  utils.rs
casper/tests/tests/: erc20.rs
casper/ud-nft/: .gitignore  Cargo.toml  justfile
casper/ud-nft/casper-nft-cep47/: Makefile  rust-toolchain
casper/ud-nft/casper-nft-cep47/cep47-tests/src/: cep47_instance.rs
casper/ud-nft/casper-nft-cep47/cep47/src/: cep47.rs  data.rs  lib.rs
casper/ud-nft/casper-nft-cep47/utils/contract-utils/src/: contract_context.rs  contract_storage.rs
casper/ud-nft/src/: main.rs
casper/utils/test-env/src/: test_contract.rs  utils.rs
casper/verifier/: Cargo.toml
casper/verifier/src/: lib.rs
casper/verifier/tests/: nft.rs  test.rs
contracts/: INFT.sol  Nft.sol  NftSale.sol
evm/: truffle-config.js
evm/assets/: 2.json
evm/contracts/: ERC721Tradable.sol  NftCreate.sol  UDToken.sol
evm/migrations/: 2_deploy_contracts.js
evm/test/: 1_test.js
