[package]
name = "contract-market"
version = "0.1.0"
edition = "2018"

[features]
default = ["test-support"]
test-support=["casper-contract/test-support"]

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.6"
casper_types_derive = "0.1.0"
hex = { version = "0.4.3", default-features = false }

[[bin]]
name = "contract-market"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

