[package]
name = "contract-util"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["thiserror"]
onchain = ["casper-contract/no-std-helpers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.6"

num_enum = { version = "0.5.7", default-features = false }

once_cell = { version = "1.12.0", default-features = false }
thiserror = { version = "1.0.31", optional = true }
base16 = { version = "0.2.1", default-features = false }

[build-dependencies]
cfg_aliases = "0.1.1"
