[package]
name = "erc20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html=
[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
casper-contract = { version = "1.3.2", features = ["no-std-helpers"] }
casper-types = "1.3.2"
casper-erc20 = {git = "https://github.com/casper-ecosystem/erc20.git" }
verifier = { path = "../verifier", features = ["contract"] }
