[package]
name = "sign_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k256 = { version = "0.7.1", features = ["ecdsa", "keccak256", "pem", "sha256"]}
sha3 = { version = "0.10" }
clap = { version = "3.0", features = ["derive"] }
casper-types = "1.5"
casper-node = "1.4"
anyhow = "1.0"
hex = "0.4"