[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-engine-test-support = { version = "=2.2.0", features = ["test-support"] }
casper-execution-engine =" 2.0"
casper-contract = { version = "1.3.2", features = ["no-std-helpers"] }
casper-types = "1.3.2"
casper-erc20 = { path = "../erc20/erc20/erc20" }
k256 = { version = "0.7.1", features = ["ecdsa", "keccak256", "pem", "sha256"]}
sha3 = { version = "0.10" }
hex = "0.4"