[package]
name = "ud-nft"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
cep47 = { path = "casper-nft-cep47/cep47" }
verifier = { path = "../verifier", features = ["contract"] }

[features]
default = ["std"]
std = ["casper-contract/std", "casper-types/std"]