[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
required-features = ["cli"]

[dependencies]
casper-contract = {version = "1.3.2", optional = true}
casper-types = "1.3.2"
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.15.0", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
k256 = { version = "0.7.1", features = ["ecdsa", "keccak256", "pem", "sha256"]}

# for cli
clap = { version = "3.0", features = ["derive"], optional = true}
anyhow = { version = "1.0", optional = true }


[features]
default = ["std"]
contract = ["casper-contract"]
std = ["casper-contract/std", "casper-types/std"]
cli = ["casper-contract/std", "casper-types/std", "clap", "anyhow"]